--- a/src/scss/paginas/_tienda.scss
+++ b/src/scss/paginas/_tienda.scss
@@ -78,6 +78,12 @@
         cursor: not-allowed;
     }
 } 
+.producto__agregar.selected{
+    background-color: v.$oscuro;
+    -webkit-box-shadow: 1px 1px 12px 5px rgba(233,148,154,0.68);
+    -moz-box-shadow: 1px 1px 12px 5px rgba(233,148,154,0.68);
+    box-shadow: 1px 1px 12px 5px rgba(233,148,154,0.68);
+}
 
 .carrito{
     border: 1px solid v.$gris;
@@ -91,6 +97,18 @@
     transition: .3s;
     opacity: 0;
     margin-right: '-100%';
+    @include m.tablet {
+        width: 70%;;
+    }
+    @include m.desktop{
+        width: 60%;
+    }
+    @include m.desktop-xl{
+        width: 40%;
+    }
+    @include m.desktop-xxl{
+        width: 35%;
+    }
     &__header{
         background-color: v.$negro;
         color: v.$blanco;
