--- a/src/scss/paginas/_tienda.scss
+++ b/src/scss/paginas/_tienda.scss
@@ -85,136 +85,136 @@
     box-shadow: 1px 1px 12px 5px rgba(233,148,154,0.68);
 }
 
-.carrito{
-    border: 1px solid v.$gris;
-    margin-top: 2rem;
-    border-radius: 1rem;
-    overflow: hidden;
-    margin-bottom: auto;
-    position: sticky !important;
-    position: -webkit-sticky;
-    top: 0;
-    transition: .3s;
-    opacity: 0;
-    margin-right: '-100%';
-    @include m.tablet {
-        width: 70%;;
-    }
-    @include m.desktop{
-        width: 60%;
-    }
-    @include m.desktop-xl{
-        width: 40%;
-    }
-    @include m.desktop-xxl{
-        width: 35%;
-    }
-    &__header{
-        background-color: v.$negro;
-        color: v.$blanco;
-        text-align: center;
-        padding: 3rem 0;
-    }
-    &__item{
-        display: flex;
-        align-items: center;
-        // justify-content: space-between;
-        position: relative;
-        border-bottom: 1px solid v.$gris;
-        padding: 2rem;
-        position: relative;
-        &__img{
-            width: 8rem;
-            margin-right: 2rem;
-        }
-        &__detalles{
+// .carrito{
+//     border: 1px solid v.$gris;
+//     margin-top: 2rem;
+//     border-radius: 1rem;
+//     overflow: hidden;
+//     margin-bottom: auto;
+//     position: sticky !important;
+//     position: -webkit-sticky;
+//     top: 0;
+//     transition: .3s;
+//     opacity: 0;
+//     margin-right: '-100%';
+//     @include m.tablet {
+//         width: 70%;;
+//     }
+//     @include m.desktop{
+//         width: 60%;
+//     }
+//     @include m.desktop-xl{
+//         width: 40%;
+//     }
+//     @include m.desktop-xxl{
+//         width: 35%;
+//     }
+//     &__header{
+//         background-color: v.$negro;
+//         color: v.$blanco;
+//         text-align: center;
+//         padding: 3rem 0;
+//     }
+//     &__item{
+//         display: flex;
+//         align-items: center;
+//         // justify-content: space-between;
+//         position: relative;
+//         border-bottom: 1px solid v.$gris;
+//         padding: 2rem;
+//         position: relative;
+//         &__img{
+//             width: 8rem;
+//             margin-right: 2rem;
+//         }
+//         &__detalles{
 
             
-        }
+//         }
 
-        &__titulo{
-            display:block;
-            font-weight: bold;
-            margin-bottom: 1rem;
-            text-transform: uppercase;
-        }
-        .selector__cantidad{
-            display: inline-block;
-            margin-right: 2.5rem;
+//         &__titulo{
+//             display:block;
+//             font-weight: bold;
+//             margin-bottom: 1rem;
+//             text-transform: uppercase;
+//         }
+//         .selector__cantidad{
+//             display: inline-block;
+//             margin-right: 2.5rem;
 
-            i{
-                font-size: 18px;
-                width: 3.2rem;
-                height: 3.2rem;
-                line-height: 3.2rem;
-                text-align: center;
-                border-radius: 50%;
-                border: 1px solid v.$negro;
-                cursor: pointer;
-            }
-        }
-        &__precio{
-            display: inline-block;
-            font-weight: bold;
-            font-size: 1.8rem;
-            margin: 1rem auto;
-        }
-        &__cantidad{
-            border: none;
-            font-size: 1.8rem;
-            background: transparent;
-            display: inline-block;
-            width: 3rem;
-            padding: .5rem;
-            text-align: center;
-        }
-        &__eliminar{
-            position: absolute;
-            right: 1.5rem;
-            top:1.5rem;
-            color: v.$negro;
-            width: 4rem;
-            height: 4rem;
-            line-height: 4rem;
-            text-align: center;
-            border-radius: 50%;
-            border: 1px solid v.$negro;
-            cursor: pointer;
-            display: block;
-            background-color: transparent;
-            z-index: 20;
-            i{
-                pointer-events: none;
-            }
-        }
-    }
-    &__total{
-        background-color: #f3f3f3;
-        padding: 3rem;
+//             i{
+//                 font-size: 18px;
+//                 width: 3.2rem;
+//                 height: 3.2rem;
+//                 line-height: 3.2rem;
+//                 text-align: center;
+//                 border-radius: 50%;
+//                 border: 1px solid v.$negro;
+//                 cursor: pointer;
+//             }
+//         }
+//         &__precio{
+//             display: inline-block;
+//             font-weight: bold;
+//             font-size: 1.8rem;
+//             margin: 1rem auto;
+//         }
+//         &__cantidad{
+//             border: none;
+//             font-size: 1.8rem;
+//             background: transparent;
+//             display: inline-block;
+//             width: 3rem;
+//             padding: .5rem;
+//             text-align: center;
+//         }
+//         &__eliminar{
+//             position: absolute;
+//             right: 1.5rem;
+//             top:1.5rem;
+//             color: v.$negro;
+//             width: 4rem;
+//             height: 4rem;
+//             line-height: 4rem;
+//             text-align: center;
+//             border-radius: 50%;
+//             border: 1px solid v.$negro;
+//             cursor: pointer;
+//             display: block;
+//             background-color: transparent;
+//             z-index: 20;
+//             i{
+//                 pointer-events: none;
+//             }
+//         }
+//     }
+//     &__total{
+//         background-color: #f3f3f3;
+//         padding: 3rem;
 
-        &__fila{
-            display:flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 2.2rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-        &__boton{
-            @include m.boton(v.$negro, v.$blanco);
-            width: 100%;
-            border-radius: .5rem;
-            li{
-                margin: 0 .5rem;
-            }
-            @include m.tablet {
-                display: flex;
-                width: fit-content;
-                margin: 0 auto;
-            }
-        }
-        &__boton:hover{
-            scale:1.05;
-        }
-    }
-}
+//         &__fila{
+//             display:flex;
+//             justify-content: space-between;
+//             align-items: center;
+//             font-size: 2.2rem;
+//             font-weight: bold;
+//             margin-bottom: 1rem;
+//         }
+//         &__boton{
+//             @include m.boton(v.$negro, v.$blanco);
+//             width: 100%;
+//             border-radius: .5rem;
+//             li{
+//                 margin: 0 .5rem;
+//             }
+//             @include m.tablet {
+//                 display: flex;
+//                 width: fit-content;
+//                 margin: 0 auto;
+//             }
+//         }
+//         &__boton:hover{
+//             scale:1.05;
+//         }
+//     }
+// }
