--- a/src/scss/paginas/_tienda.scss
+++ b/src/scss/paginas/_tienda.scss
@@ -1,6 +1,10 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
-
+.boton-vermas{
+    @include m.boton(v.$azulClaro, v.$negro);
+    margin-top: 1rem;
+    display: block;
+}
 
 .tienda{
     @include m.contenedor-xxxl;
